fixed WCAG contrast

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,7 +23,7 @@ a:visited {
 
 body {
     color: #FFFFFF;
-    background-color: #1c0141;
+    background-color: #100027;
     font-family: 'Roboto', sans-serif;
 }
 
